--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,27 @@
-#spring:
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/jpashop;
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-##        show_sql: true
-#        format_sql: true
-server:
-  port: 9494
 spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+#        show_sql: true
+        format_sql: true
   mvc:
     view:
       suffix: .html
-#logging:
-#  level:
-#    org.hibernate.SQL: debug
-#    org.hibernate.type: trace
+server:
+  port: 9499
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
+
+
+
