--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,19 @@
-spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop;
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#spring:
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/jpashop;
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
 
-  jpa:
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-#        show_sql: true
-        format_sql: true
-  mvc:
-    view:
-      suffix: .html
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+##        show_sql: true
+#        format_sql: true
 server:
-  port: 9499
+  port: 9500
 
 logging:
   level:
