--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,22 @@
-#spring:
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/jpashop;
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop;
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-##        show_sql: true
-#        format_sql: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+#        show_sql: true
+        format_sql: true
+#spring:
+#  h2:
+#    console:
+#      enabled: true
+#      path: /h2-console
 server:
   port: 9500
 
